# sfdp_simulation

./: CONTRIBUTING.md  QUICK_START.bat  QUICK_START.sh  README.md  USER_GUIDE.md  VALIDATION_CHECKSUMS.md
code/: pyproject.toml  sfdp_clean_validation_system.py  sfdp_continuous_tuning_150.py  sfdp_fixed_validation_140.py  sfdp_legitimate_tuning_system.py  sfdp_v17_3_main.py
code/helpers/: __init__.py  new_data_processor.py  sfdp_empirical_ml_suite.py  sfdp_kalman_fusion_suite.py  sfdp_physics_suite.py  sfdp_utility_support_suite.py  sfdp_validation_qa_suite.py
code/modules/: __init__.py  sfdp_comprehensive_validation.py  sfdp_conditions_optimizer.py  sfdp_enhanced_tool_selection.py  sfdp_execute_6layer_calculations.py  sfdp_full_fem_layer1.py  sfdp_generate_reports.py  sfdp_initialize_system.py  sfdp_intelligent_data_loader.py  sfdp_proper_kalman_layer5.py  sfdp_setup_physics_foundation.py  sfdp_taylor_coefficient_processor.py
configs/: sfdp_constants_tables.py  sfdp_user_config.py
data/: additional_experimental_data.csv  integrated_experimental_data.csv
docs/: API_REFERENCE.md  WHITE_PAPER.md
reference/data_set/: create_extended_validation_dataset.txt  data_sources_reference.md  extended_machining_conditions.txt  extended_materials_csv.txt  extended_tool_specifications.txt  extended_validation_experiments.txt
results/: FINAL_PERFORMANCE_SUMMARY.md
sfdp_old_versions/sfdp_ver_0.0.0.1/: sfdp-interactive-demo.html  (+2 more)
sfdp_ver_17.3.1/: LICENSE  README.md  gitignore_file.txt  로드맵 제시.txt  코멘트.txt
tuning_logs/: continuous_tuning_results_20250530_105739.json
(+111 files in other folders)
