[project]
name = "sfdp-v17-3"
version = "17.3.0"
description = "Smart Fusion-based Dynamic Prediction System for Ti-6Al-4V Machining (Python Port)"
authors = [
    {name = "SFDP Development Team", email = "sfdp@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Academic Research Use Only"}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sfdp*", "config*", "modules*", "helpers*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=. --cov-report=html"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "ANN", "ASYNC", "S", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["ANN101", "ANN102", "COM812", "ISC001"]
target-version = "py39"